--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADA Comics</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-200">
@@ -12,7 +14,7 @@
     <!-- Titulo Principal -->
     <header class="bg-black py-1">
         <div class="bg-red-600 w-max mx-auto px-4 py-2">
-            <h1 class="text-white text-4xl font-bold text-center">ADA COMICS</h1>
+            <h1 class="font-bangers text-white text-5xl font-bold text-center" style="font-family: 'Bangers', cursive;">ADA COMICS</h1>
         </div>
     </header>
 
@@ -67,15 +69,15 @@
     <!-- Contenedor para mostrar detalles del item seleccionado -->
     <div id="detalles" class="max-w-4xl mx-auto p-8 bg-white rounded-lg shadow-lg mt-8 hidden">
         <div class="flex gap-8">
-          <img id="imagen" class="w-1/3 h-auto" alt="Imagen">
-          <div>
+            <img id="imagen" class="w-1/3 h-auto" alt="Imagen">
+        <div>
             <h2 id="titulo" class="text-2xl font-bold mb-4"></h2>
             <p id="descripcion" class="text-lg mb-4"></p>
             <p id="infoExtra" class="text-sm text-gray-600"></p>
-          </div>
+        </div>
         </div>
         <button id="cerrarDetalles" class="bg-red-500 hover:bg-red-700 px-4 py-2 rounded-lg mb-4 mt-8">Cerrar</button>
-      </div>
+        </div>
 
     <!-- Contenedor para navegación -->
     <div id="navegacion" class="flex justify-center items-center gap-4 mt-4">
