--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                     <option value="oldest">Más viejos</option>
                 </select>
             </div>
+
+            
             <div class="flex-1 sm:w-1/4 flex items-end">
                 <button type="submit" class="w-full bg-red-600 text-white py-2 px-4 rounded-lg hover:bg-red-700">
                     BUSCAR
@@ -70,24 +72,29 @@
     <div id="detalles" class="max-w-4xl mx-auto p-8 bg-white rounded-lg shadow-lg mt-8 hidden">
         <div class="flex gap-8">
             <img id="imagen" class="w-1/3 h-auto" alt="Imagen">
-        <div>
-            <h2 id="titulo" class="text-2xl font-bold mb-4"></h2>
-            <p id="descripcion" class="text-lg mb-4"></p>
-            <p id="infoExtra" class="text-sm text-gray-600"></p>
-        </div>
+            <div>
+                <h2 id="titulo" class="text-2xl font-bold mb-4"></h2>
+                <p id="descripcion" class="text-lg mb-4"></p>
+                <p id="fecha" class="text-sm font-medium mb-2"></p>
+                <p id="guionistas" class="text-sm text-gray-600 mb-2"></p>
+                <p id="personajes" class="text-sm text-gray-600"></p>
+            </div>
         </div>
         <button id="cerrarDetalles" class="bg-red-500 hover:bg-red-700 px-4 py-2 rounded-lg mb-4 mt-8">Cerrar</button>
-        </div>
-
-    <!-- Contenedor para navegación -->
-    <div id="navegacion" class="flex justify-center items-center gap-4 mt-4">
-        <button id="btnAnterior" class="bg-gray-300 text-gray-700 px-4 py-2 rounded-lg disabled:opacity-50" disabled>Anterior</button>
-        <span id="paginaActual" class="text-lg font-bold">1</span>
-        <button id="btnSiguiente" class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 transition">Siguiente</button>
     </div>
 
-    <!-- Paginación -->
-    <div id="paginacion" class="flex justify-center mt-8 gap-2"></div>
+    <!-- Contenedor para navegación -->
+
+<div class="flex flex-col items-center mt-6 mb-6">
+    <div class="flex gap-4">
+        <button id="btnPrimera" class="bg-red-500 text-white px-4 py-2 hover:bg-red-600 transition">Primera</button>
+        <button id="btnAnterior" class="bg-red-300 text-gray-700 px-4 py-2 disabled:opacity-50" disabled>Anterior</button>
+        <span id="paginaActual" class="text-lg font-bold">1</span>
+        <button id="btnSiguiente" class="bg-red-500 text-white px-4 py-2  hover:bg-red-600 transition">Siguiente</button>
+        <button id="btnUltima" class="bg-red-500 text-white px-4 py-2 hover:bg-red-600 transition">Última</button>
+    </div>
+</div>
+
 
     <footer class="bg-black py-7">
         <p class="text-center text-white">Hecho con <span class="text-red-600">❤️</span> por Andrea</p>
